# mpris-notifier

./: Cargo.toml  README.md  buildspec.yml
src/: art.rs  configuration.rs  dbus.rs  formatter.rs  main.rs  mpris.rs  notifier.rs  signal_handler.rs
