[package]
name = "mpris-notifier"
authors = ["Lina <61861965+l1na-forever@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/l1na-forever/mpris-notifier"
description = "Generates XDG desktop notifications for MPRIS status changes (track changes)"
keywords = ["mpris", "xdg", "notifications", "tiny", "notifier"]

[features]
default = ["album-art"]
album-art = ["ureq", "image"]

[dependencies]
# Macro to generate error types from enums
thiserror = "1"

# Pure Rust library for accessing D-Bus. A specific revision ahead of latest
# release (0.17) is used to support Marshal/Unmarshal on enums, as well as get
# back better typed errors. Move to 0.18 when 0.18 is cut.
rustbus        = { git = "https://github.com/KillingSpark/rustbus", rev = "1dfd01d0ef6be915a7a50d501da849703b636f68" }
rustbus_derive = { git = "https://github.com/KillingSpark/rustbus", rev = "1dfd01d0ef6be915a7a50d501da849703b636f68" }

# Logging facade and simple output logger
log = "0.4"
simple_logger = "2"

# Minimal, blocking/sync HTTP client used to download album art
ureq = { version = "*", optional = true }

# Image processing library, used to convert album art into the XDG
# notification image-data format
image = { version = "0.24", optional = true }

# Config file loading
serde = { version = "1.0", features = ["derive"] }
toml = "*"
home = "*"

# Notificaiton message formatting
regex = "1"
lazy_static = "*"

[dev-dependencies]
# For testing configuration loading
tempfile = "3"
