[package]
name = "mpris-notifier"
authors = ["Lina <61861965+l1na-forever@users.noreply.github.com>"]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/l1na-forever/mpris-notifier"
description = "Generates XDG desktop notifications for MPRIS status changes (track changes)"
keywords = ["mpris", "xdg", "notifications", "tiny", "notifier"]

[features]
default = ["album-art"]
album-art = ["ureq", "image"]

[dependencies]
# Macro to generate error types from enums
thiserror = "1"

# Pure Rust library for accessing D-Bus.
rustbus = "0.17"

# Logging facade and simple output logger
log = "0.4"
simple_logger = "2"

# Minimal, blocking/sync HTTP client used to download album art
ureq = { version = "2.5", optional = true }

# Image processing library, used to convert album art into the XDG
# notification image-data format
image = { version = "0.24", optional = true }

# Config file loading
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
home = "0.5"

# Notificaiton message formatting
regex = "1"
lazy_static = "1"

[dev-dependencies]
# For testing configuration loading
tempfile = "3"
